# leaguepedia-scoreboard-parser-web

./: .gitignore  README.md  parser_handler.py  pyproject.toml  requirements.txt  stats.json  web_parser.py
static/: main.js  style.css
static/css/: style.css
static/js/: main.js
static/js/1.4/: main.js
templates/: help.html  index.html
